--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Napoleonic Wars, 1800-1815 -- Fiction'
 - !lcc 'PR'
 - !lcsh 'Great Britain -- History, Naval -- 19th century -- Fiction'
+- GITenberg
 title: Percival Keene
 url: http://www.gutenberg.org/ebooks/21572
